--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/Default.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/Default.cshtml
@@ -21,3 +21,8 @@
         Html.RenderPartial("~/Views/Project/Wealth/Partial/Popup.cshtml");
     }
 }
+@section Scripts {
+    @{
+        Html.RenderPartial("~/Views/Project/Wealth/Partial/Scripts.cshtml");
+    }
+}
