--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/HomeLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/HomeLayout.cshtml
@@ -13,3 +13,9 @@
         Html.RenderPartial("~/Views/Project/Wealth/Partial/Popup.cshtml");
     }
 }
+
+@section Scripts {
+    @{
+        Html.RenderPartial("~/Views/Project/Wealth/Partial/Scripts.cshtml");
+    }
+}
