--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
@@ -169,7 +169,7 @@
                                     <tbody id="tab-1">
                                     </tbody>
                                 </table>
-                                <div class="l-pagination">
+                                <div class="l-pagination" data-length="@Model.DTotalPages">
                                     <div class="l-pagination__size">
                                         <span>每頁顯示</span>
                                         <!-- [data-sizebox="true"]: 載入後自動綁定分頁筆數客製樣式下拉功能 -->
@@ -183,12 +183,12 @@
                                     <div class="l-pagination__switch">
                                         <!-- [data-pagination="true"]: 載入後自動綁定分頁功能 -->
                                         <!-- [data-total="888"]: 總筆數，必要資訊，供分頁狀態判斷使用 -->
-                                        <div class="o-pagination" data-pagination="true" data-total="888">
+                                        <div class="o-pagination" data-pagination="true" data-total="@Math.Ceiling(Model.DTotalPages / 10.0)">
                                             <!-- .is-disabled: 停用狀態，無法點擊 -->
                                             <a href="#" class="o-pagination__prev is-disabled"></a>
                                             <span class="o-pagination__pager">
                                                 <input type="number" value="1" class="o-pagination__no">
-                                                <span class="o-pagination__total">888</span>
+                                                <span class="o-pagination__total">@Math.Ceiling(Model.DTotalPages / 10.0)</span>
                                             </span>
                                             <!-- .is-disabled: 停用狀態，無法點擊 -->
                                             <a href="#" class="o-pagination__next"></a>
@@ -336,7 +336,7 @@
                                     <tbody id="tab-2">
                                     </tbody>
                                 </table>
-                                <div class="l-pagination">
+                                <div class="l-pagination" data-length="@Model.FTotalPages">
                                     <div class="l-pagination__size">
                                         <span>每頁顯示</span>
                                         <!-- [data-sizebox="true"]: 載入後自動綁定分頁筆數客製樣式下拉功能 -->
@@ -350,12 +350,12 @@
                                     <div class="l-pagination__switch">
                                         <!-- [data-pagination="true"]: 載入後自動綁定分頁功能 -->
                                         <!-- [data-total="888"]: 總筆數，必要資訊，供分頁狀態判斷使用 -->
-                                        <div class="o-pagination" data-pagination="true" data-total="888">
+                                        <div class="o-pagination" data-pagination="true" data-total="@Math.Ceiling(Model.FTotalPages / 10.0)">
                                             <!-- .is-disabled: 停用狀態，無法點擊 -->
                                             <a href="#" class="o-pagination__prev is-disabled"></a>
                                             <span class="o-pagination__pager">
                                                 <input type="number" value="1" class="o-pagination__no">
-                                                <span class="o-pagination__total">888</span>
+                                                <span class="o-pagination__total">@Math.Ceiling(Model.FTotalPages / 10.0)</span>
                                             </span>
                                             <!-- .is-disabled: 停用狀態，無法點擊 -->
                                             <a href="#" class="o-pagination__next"></a>
@@ -401,20 +401,19 @@
                             var paginationElement = tabPanel.find('.l-pagination__switch .o-pagination');
                             paginationElement.attr('data-total', totalPages);
                             paginationElement.find('.o-pagination__total').text(totalPages);
-                            var page = tabPanel.find('.o-pagination__no').val(currentPage);
-                            if (totalPages <= 1) {
-                                $('.o-pagination__prev').addClass('is-disabled');
-                                $('.o-pagination__next').addClass('is-disabled');
-                            } else if (totalPages === currentPage) {
-                                $('.o-pagination__next').addClass('is-disabled');
-                            } else if(currentPage == 1) {
-                                $('.o-pagination__prev').addClass('is-disabled');
-                                $('.o-pagination__next').removeClass('is-disabled');
+                            tabPanel.find('.o-pagination__no').val(currentPage);
+
+                            var dataLength = parseInt(totalPages) * 10;
+                            paginationElement.find('.l-pagination__switch').toggleClass('u-hidden', pageSize === 'all');
+                            var total = Math.ceil(dataLength / pageSize);
+                            paginationElement.find('[data-total]').attr('data-total', total);
+                            var current = parseInt(currentPage);
+                            paginationElement.find('.o-pagination__next').toggleClass('is-disabled', total <= 1 || current === total);
+                            if (current === 1) {
+                                paginationElement.find('.o-pagination__prev').addClass('is-disabled');
                             }
-                            else {
-                                $('.o-pagination__prev').removeClass('is-disabled');
-                                $('.o-pagination__next').removeClass('is-disabled');
-                            }
+
+                            
 
                             if (!disableSorting) {
                                 var tabPanel = $('.c-tab__panel[data-tab-panel-id="' + tabTarget + '"]');
@@ -503,13 +502,13 @@
                 window.loading('show');
                 var $this = $(this);
                 var orderby = '';
-                if ($this.hasClass('is-desc')) {
-                    $this.removeClass('is-desc').addClass('is-asc');
-                    orderby = 'is-asc';
+                if ($this.hasClass('is-asc')) {
+                    $this.removeClass('is-asc').addClass('is-desc');
+                    orderby = 'is-desc';
                 } else {
                     $this.closest('.l-table').find('.o-sorting').removeClass('is-asc is-desc');
-                    $this.addClass('is-desc');
-                    orderby = 'is-desc';
+                    $this.addClass('is-asc');
+                    orderby = 'is-asc';
                 }
 
                 var sortingColumn = $this.data('sorting-column');
@@ -573,13 +572,12 @@
                 var tabTarget = findTabPanelId(this);
                 var tabPanel = $('.c-tab__panel[data-tab-panel-id="' + tabTarget + '"]');
                 var pageSize = tabPanel.find('.o-selectbox--pagesize').val();
-                var currentPage = tabPanel.find('.o-pagination__no').val();
+                var currentPage = tabPanel.find('.o-pagination__no').val(1);
                 var sortingColumns = findSortingColumns();
                 sortingColumns.forEach(function (sortingInfo) {
                     console.log('切換:', 'TAB:', tabTarget, '，選擇的基金類型:', selectedValue, '，現在第幾頁:', currentPage, "，現在顯示幾筆:", pageSize, "，排序順序:", sortingInfo.column, "，升冪還降冪:", sortingInfo.direction);
                     loadData(tabTarget, selectedValue, 1, pageSize, sortingInfo.column, sortingInfo.direction);
                 });
-                var page = tabPanel.find('.o-pagination__no').val(1);
                 setTimeout(() => {
                     // 關閉loading
                     window.loading('hide');
@@ -619,7 +617,7 @@
 
                         var pageSize = tabPanel.find('.o-selectbox--pagesize').val();
                         var selectedcolumn = tabPanel.find('.o-pelletbox__input:checked').val();
-                        var currentPage = tabPanel.find('.o-pagination__no').val();
+                        var currentPage = tabPanel.find('.o-pagination__no').val(1);
                         var sortingColumns = findSortingColumns();
                         sortingColumns.forEach(function (sortingInfo) {
                             if (selectedValue === "台幣" & sortingInfo.column === "SixMonthReturnOriginalCurrency") {
@@ -682,59 +680,16 @@
                 console.log(tabTarget, selectedValue, page, pageSize);
                 var totalPages = parseInt(tabPanel.find('.o-pagination').attr('data-total'));
 
-                if (page > totalPages) {
-                    page = totalPages;
                     var sortingColumns = findSortingColumns();
                     sortingColumns.forEach(function (sortingInfo) {
                         console.log('Sorting column:', sortingInfo.column, 'Sorting direction:', sortingInfo.direction);
                         loadData(tabTarget, selectedValue, page, pageSize, sortingInfo.column, sortingInfo.direction);
                     });
-                    $('.o-pagination__no').val(page);
-                    if (totalPages <= 1) {
-                        $('.o-pagination__prev').addClass('is-disabled');
-                        $('.o-pagination__next').addClass('is-disabled');
-                    } else {
-                        if (page === 1) {
-                            $('.o-pagination__prev').addClass('is-disabled');
-                            $('.o-pagination__next').removeClass('is-disabled');
-                        } else if (page === totalPages) {
-                            $('.o-pagination__prev').removeClass('is-disabled');
-                            $('.o-pagination__next').addClass('is-disabled');
-                        } else {
-                            $('.o-pagination__prev').removeClass('is-disabled');
-                            $('.o-pagination__next').removeClass('is-disabled');
-                        }
-                    }
-                }
-                else {
-                    var sortingColumns = findSortingColumns();
-                    sortingColumns.forEach(function (sortingInfo) {
-                        console.log('Sorting column:', sortingInfo.column, 'Sorting direction:', sortingInfo.direction);
-                        loadData(tabTarget, selectedValue, page, pageSize, sortingInfo.column, sortingInfo.direction);
-                    });
-                    // 更新分頁按鈕狀態
-                    console.log("更新後幾頁啦", totalPages);
-                    if (totalPages <= 1) {
-                        $('.o-pagination__prev').addClass('is-disabled');
-                        $('.o-pagination__next').addClass('is-disabled');
-                    } else {
-                        if (page === 1) {
-                            $('.o-pagination__prev').addClass('is-disabled');
-                            $('.o-pagination__next').removeClass('is-disabled');
-                        } else if (page === totalPages) {
-                            $('.o-pagination__prev').removeClass('is-disabled');
-                            $('.o-pagination__next').addClass('is-disabled');
-                        } else {
-                            $('.o-pagination__prev').removeClass('is-disabled');
-                            $('.o-pagination__next').removeClass('is-disabled');
-                        }
-                    }
-                }
 
                 var page = tabPanel.find('.o-pagination__no').val(page);
 
                 // scroll 到表頭
-                $(this).trigger('scrolltop');
+                $(this).closest('.l-table').scrollPosition('scroll');
 
                 // 因展示，故使用 setTimeout 延遲關閉 loading
                 setTimeout(() => {
@@ -755,6 +710,11 @@
                 var tabPanel = $('.c-tab__panel[data-tab-panel-id="' + tabTarget + '"]');
                 var selectedValue = tabPanel.find('.o-pelletbox__input:checked').val();
                 var page = $('.o-pagination__no').val(1);
+                var totalPages = tabPanel.find('#totalPages').val();
+
+                var $parentWrap = $(this).closest('.l-pagination');
+                var dataLength = parseInt(totalPages)*10;
+                $parentWrap.find('.l-pagination__switch').toggleClass('u-hidden', size === 'all');
 
                 if (size === 'all') {
                     var sortingColumns = findSortingColumns();
@@ -763,6 +723,7 @@
                         loadData(tabTarget, selectedValue, 1, 'all', sortingInfo.column, sortingInfo.direction);
                     });
                 } else {
+                    
                     var sortingColumns = findSortingColumns();
                     sortingColumns.forEach(function (sortingInfo) {
                         console.log('Sorting column:', sortingInfo.column, 'Sorting direction:', sortingInfo.direction);
